Bug 405554 - error: no member named 'setTime_t' in 'QDateTime'
Summary: error: no member named 'setTime_t' in 'QDateTime'
Status: RESOLVED FIXED
Alias: None
Product: frameworks-solid
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.56.0
Platform: Homebrew (macOS) macOS
: NOR critical
Target Milestone: ---
Assignee: Lukáš Tinkl
URL: https://github.com/KDE-mac/homebrew-k...
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-17 10:26 UTC by Yurii Kolesnykov
Modified: 2019-04-20 14:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yurii Kolesnykov 2019-03-17 10:26:05 UTC
SUMMARY
Compilation error

STEPS TO REPRODUCE
1. brew install kf5-solid

OBSERVED RESULT
FAILED: src/solid/CMakeFiles/KF5Solid.dir/devices/backends/iokit/cfhelper.cpp.o 
/usr/local/Homebrew/Library/Homebrew/shims/mac/super/clang++  -DKF5Solid_EXPORTS -DQT_CORE_LIB -DQT_DBUS_LIB -DQT_DISABLE_DEPRECATED_BEFORE=0x050d00 -DQT_GUI_LIB -DQT_MAC_USE_COCOA -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_SIGNALS_SLOTS_KEYWORDS -DQT_NO_URL_CAST_FROM_STRING -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DQT_XML_LIB -D_DARWIN_C_SOURCE -D_LARGEFILE64_SOURCE -Isrc/solid -I../src/solid -Isrc/solid/KF5Solid_autogen/include -I../src/solid/devices -I../src/solid/devices/frontend -I../src/solid/.. -Isrc/solid/.. -I/usr/local/opt/qt/lib/QtCore.framework/Versions/5/Headers/5.12.1 -I/usr/local/opt/qt/lib/QtCore.framework/Versions/5/Headers/5.12.1/QtCore -iframework /usr/local/opt/qt/lib -isystem /usr/local/opt/qt/lib/QtCore.framework/Headers -isystem /usr/local/opt/qt/./mkspecs/macx-clang -isystem /usr/local/opt/qt/lib/QtXml.framework/Headers -isystem /usr/local/opt/qt/lib/QtWidgets.framework/Headers -isystem /usr/local/opt/qt/lib/QtGui.framework/Headers -isystem /usr/local/opt/qt/lib/QtDBus.framework/Headers -std=c++0x -fno-operator-names -fno-exceptions -Wno-gnu-zero-variadic-macro-arguments -Wall -Wextra -Wcast-align -Wchar-subscripts -Wformat-security -Wno-long-long -Wpointer-arith -Wundef -Wnon-virtual-dtor -Woverloaded-virtual -Werror=return-type -Wvla -Wdate-time -fdiagnostics-color=always -pedantic -Wzero-as-null-pointer-constant -DNDEBUG -fPIC -fvisibility=hidden -fvisibility-inlines-hidden   -fPIC -std=gnu++11 -MD -MT src/solid/CMakeFiles/KF5Solid.dir/devices/backends/iokit/cfhelper.cpp.o -MF src/solid/CMakeFiles/KF5Solid.dir/devices/backends/iokit/cfhelper.cpp.o.d -o src/solid/CMakeFiles/KF5Solid.dir/devices/backends/iokit/cfhelper.cpp.o -c ../src/solid/devices/backends/iokit/cfhelper.cpp
../src/solid/devices/backends/iokit/cfhelper.cpp:97:12: error: no member named 'setTime_t' in 'QDateTime'
        dt.setTime_t(uint(kCFAbsoluteTimeIntervalSince1970));
        ~~ ^
1 error generated.

EXPECTED RESULT
No errors.

SOFTWARE/OS VERSIONS
MacOS: 10.14.3
KDE Frameworks Version: 5.56
Qt Version: 5.12.1

Full log here: https://git.io/fjvWI
Comment 1 wojnilowicz 2019-03-31 06:41:28 UTC
Confirming on Mac OS 10.13.3 and Qt 5.12.2
Comment 2 wojnilowicz 2019-04-18 14:50:49 UTC
It seems that setTime_t is deprecated since Qt 5.8 and should be replaced by setSecsSinceEpoch.
For more information look under
https://bugreports.qt.io/browse/QTBUG-64627
Comment 3 Shubham 2019-04-20 14:22:51 UTC
Git commit b63c2a236faf1395082fbbc1a478686b96520823 by Shubham Jangra.
Committed on 20/04/2019 at 14:22.
Pushed by shubham into branch 'master'.

Fix no member named 'setTime_t' in 'QDateTime' error while building

Summary:

setTime_t() is obsolete since Qt v5.8. It is replaced by  setSecsSinceEpoch()
see https://doc.qt.io/archives/qt-5.8/qdatetime-obsolete.html#setTime_t

Reviewers: meven, elvisangelaccio

Reviewed By: meven

Subscribers: elvisangelaccio, meven, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20691

M  +1    -1    src/solid/devices/backends/iokit/cfhelper.cpp

https://commits.kde.org/solid/b63c2a236faf1395082fbbc1a478686b96520823