Fix no member named 'setTime_t' in 'QDateTime' error while building

Summary:
BUG: 405554

setTime_t() is obsolete since Qt v5.8. It is replaced by  setSecsSinceEpoch()
see https://doc.qt.io/archives/qt-5.8/qdatetime-obsolete.html#setTime_t

Reviewers: meven, elvisangelaccio

Reviewed By: meven

Subscribers: elvisangelaccio, meven, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20691